--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,17 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.batch_size=1000
 spring.jpa.defer-datasource-initialization=true
-
+spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
 logging.level.org.hibernate.SQL=off
 spring.jpa.show-sql=true
+
+#redis
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.redit.port=6379
+spring.cache.redis.time-to-live=600000
+
+#JWT
+app.jwt.secret=12345678901234567890123456789012
+app.jwt.expiration-ms=86400000
